fix chrome jumpyjumpy error

--- a/client/stylesheets/main.styl
+++ b/client/stylesheets/main.styl
@@ -105,7 +105,7 @@ ul.related-artists
 				width 95%
 				background-size cover
 				background-repeat no-repeat
-				transition all .1s
+				// transition all .1s
 
 			&.selected
 				.image
